--- a/client/index.html
+++ b/client/index.html
@@ -17,15 +17,16 @@
 
     <div ng-view></div>
 
-    <script type="text/javascript" src="../node_modules/angular/angular.js"></script>
-    <script type="text/javascript" src="../node_modules/angular-route/angular-route.js"></script>
-    <script type="text/javascript" src="../node_modules/angular-animate/angular-animate.js"></script>
+    <script type="text/javascript" src="lib/angular/angular.js"></script>
+    <script type="text/javascript" src="lib/angular-route/angular-route.js"></script>
+    <script type="text/javascript" src="lib/angular-animate/angular-animate.js"></script>
 
     <script type="text/javascript" src="app/Grid/gridController.js"></script>
     <script type="text/javascript" src="app/Solo/soloController.js"></script>
     <script type="text/javascript" src="app/Fav/favCtrl.js"></script>
 <!--     <script src="app/shorten/shorten.js"></script>
     <script src="app/services/services.js"></script> -->
+    <script type="text/javascript" src="app/http.js"></script>
     <script type="text/javascript" src="app/app.js"></script>
   </body>
 </html>
