--- a/client/app/Grid/gridView.html
+++ b/client/app/Grid/gridView.html
@@ -1,26 +1,28 @@
 
 <div id='container' ng-controller="gridController">
-  <a href="#/soloView"><i class="fa fa-square fa-2x" aria-hidden="true"></i></a>
-  <a href="#/gridView"><i class="fa fa-th-large fa-2x active" aria-hidden="true"></i></a>
-  <a href="#/favorites"><i class="fa fa-heart fa-2x" aria-hidden="true"></i></a>
-
+  <div class="nav">
+    <a href="#/soloView"><i class="fa fa-square fa-2x" aria-hidden="true"></i></a>
+    <a href="#/gridView"><i class="fa fa-th-large fa-2x active" aria-hidden="true"></i></a>
+    <a href="#/favorites"><i class="fa fa-heart fa-2x" aria-hidden="true"></i></a>
+  </div>
   <div class="container">
-  <h1 class="viewTitle">Grid View</h1>
+  <!-- <h2 class="viewTitle">Grid View</h2> -->
     <div class="gridContainer" ng-repeat="obj in results track by $index">
-      <a class="gridLink" ng-href='{{ obj.link }}'>
-        <h3 class="gridTitle">{{ obj.title }}</h3>
-      </a>
 
       <div class="imgBoxGrid" ng-mouseover="hoverIn()" ng-mouseleave="hoverOut()" >
 
         <div ng-show="hoverEdit" class="animate-show hoverSpanGrid">
-          <i ng-click="fav()" class="fa fa-floppy-o saveIconGrid" aria-hidden="true"></i>
+          <i ng-click="fav($index)" class="fa fa-heart saveIconGrid" aria-hidden="true"></i>
           <i ng-click="next()" class="fa fa-arrow-circle-right nextIconGrid" aria-hidden="true"></i>
         </div>
 
         <img class="gridImg" src='{{ obj.thumb }}' />
       </div>   
       
+      <a class="gridLink" ng-href='{{ obj.link }}'>
+        <h4 class="gridTitle">{{ obj.title }}</h4>
+        <!-- <p>{{ obj.link }}</p> -->
+      </a>
     </div>
   </div>
 </div>
