--- a/client/app/Solo/soloView.html
+++ b/client/app/Solo/soloView.html
@@ -1,26 +1,27 @@
 
 <div id='container' ng-controller="soloController">
-  <a href="#/soloView"><i class="fa fa-square fa-2x active" aria-hidden="true"></i></a>
-  <a href="#/gridView"><i class="fa fa-th-large fa-2x" aria-hidden="true"></i></a>
-  <a href="#/favorites"><i class="fa fa-heart fa-2x" aria-hidden="true"></i></a>
-
+  <div class="nav">
+    <a href="#/soloView"><i class="fa fa-square fa-2x active" aria-hidden="true"></i></a>
+    <a href="#/gridView"><i class="fa fa-th-large fa-2x" aria-hidden="true"></i></a>
+    <a href="#/favorites"><i class="fa fa-heart fa-2x" aria-hidden="true"></i></a>
+  </div>
   <div class="container">
-    <h1 class="viewTitle">Solo View</h1>
+    <!-- <h2 class="viewTitle">Solo View</h2> -->
     <div class="soloContainer">
-      <a class="soloLink" ng-href='{{ results[index].link }}'>
-        <h3 class="soloTitle">{{ results[index].title }}</h3>
-      </a>
 
       <div class="imgBoxSolo" ng-mouseover="hoverIn()" ng-mouseleave="hoverOut()" >
 
         <div ng-show="hoverEdit" class="animate-show hoverSpanSolo">
-          <i ng-click="fav()" class="fa fa-floppy-o saveIconSolo" aria-hidden="true"></i>
+          <i ng-click="fav()" class="fa fa-heart saveIconSolo" aria-hidden="true"></i>
           <i ng-click="next()" class="fa fa-arrow-circle-right nextIconSolo" aria-hidden="true"></i>
         </div>
-
-        <img class="soloImg" src='{{ results[index].thumb }}' />
+        <img class="soloImg" src='{{ results[index].solo }}' />
+        <!-- <p>{{ results[index].link }}</p> -->
       </div>
       
+      <a class="soloLink" ng-href='{{ results[index].link }}'>
+        <h3 class="soloTitle">{{ results[index].title }}</h3>
+      </a>
     </div>
   </div>
 </div>
