--- a/client/index.html
+++ b/client/index.html
@@ -2,12 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>MVP Cuteness</title>
+    <title>TotesAdorbs</title>
+    <link href="https://fonts.googleapis.com/css?family=Covered+By+Your+Grace|Indie+Flower|Permanent+Marker" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="stylesheet" href="lib/fontawesome/css/font-awesome.min.css">
   </head>
   <body ng-app='app'>
-    <h1>MVP Cuteness</h1>
+    <h1>TotesAdorbs</h1>
+    <h5>a cuteness conglomerate</h5>
 
     <!-- the ng-view directive is where our templates will be loaded into when naviagted to -->
 <!--     <nav>
