--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="lib/fontawesome/css/font-awesome.min.css">
   </head>
   <body ng-app='app'>
+<form class="login">
+<div><span class="input">Username</span><input width="50"></div>
+<div><span class="input">Password</span><input></div>
+<input class="input submit" type="submit" value="Submit">
+</form>
     <h1>TotesAdorbs</h1>
     <h5>a cuteness conglomerate</h5>
 
